--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=Roman
-spring.datasource.password=postgres
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
@@ -9,5 +9,5 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # App Properties
-bezkoder.app.jwtSecret=c7f52ff552836158bd51641eaea57e89b8e5add9
+bezkoder.app.jwtSecret=
 bezkoder.app.jwtExpirationMs=86400000
